syntax = "proto3";

option csharp_namespace = "EdgeServices.gRPC";
import "google/protobuf/timestamp.proto";

package message;

service EdgeGateway {
	//unary
  rpc Send (EquipmentMessage) returns (EdgeResponse);
  // Client streaming
  rpc SendStream (stream EquipmentMessage) returns (EdgeResponse);
}

message EquipmentMessage {
  string deviceId=1;
  string status=2;
  google.protobuf.Timestamp timestamp=3;
  string temperature=4;
  string energyConsumption=5;
  string payload=6;
}

message EdgeResponse {
  google.protobuf.Timestamp _receivedTime=1;
}
